--- a/app/views/islands/index.html.erb
+++ b/app/views/islands/index.html.erb
@@ -23,7 +23,7 @@
         <div class="big-listing">
           <div class="listing-image">
             <% if island.photos.any? %>
-              <%= cl_image_tag island.photos.first.key %>
+              <%= link_to cl_image_tag(island.photos.first.key), island_path(island.id) %>
             <% else %>
               <img src="https://images.pexels.com/photos/994605/pexels-photo-994605.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" alt="">
             <% end %>
@@ -40,10 +40,7 @@
 
           <div class="island-details">
             <div>
-              <p><%= island.description[0, 150] %></p>
-            </div>
-            <div class="island-image-icon">
-              <img src="https://i.pinimg.com/originals/74/b4/b6/74b4b6e3299c72aa67967f4d2fd7936c.png" alt="">
+              <p><%= island.description[0, 200] %></p>
             </div>
           </div>
         </div>
