--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -32,7 +32,7 @@
       <div class="fi-card">
         <div class="fi-image">
           <% if island.photos.any? %>
-              <%= cl_image_tag island.photos.first.key %>
+             <%= link_to cl_image_tag(island.photos.first.key), island_path(island.id) %>
           <% else %>
               <img src="https://images.pexels.com/photos/994605/pexels-photo-994605.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" alt="">
           <% end %>
@@ -42,32 +42,10 @@
         </div>
       </div>
     <% end %>
-
-      <!-- <div class="fi-card">
-        <div class="fi-image">
-          <img src="https://images.unsplash.com/photo-1529333241880-9558d5e5e064?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=716&q=80" alt="">
-        </div>
-        <div class="fi-text">
-          <h2 class="fi-text-js text-center"><%= @islands.sample.name %></h2>
-        </div>
-      </div>
-
-      <div class="fi-card">
-        <div class="fi-image">
-          <img class="image-js" src="https://images.unsplash.com/photo-1529420705456-5c7e04dd043d?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=800&q=80" alt="">
-        </div>
-        <div class="fi-text">
-          <h2 class="fi-text-js text-center"><%= @islands.sample.name %></h2>
-        </div>
-      </div> -->
     </div>
 
   </div>
 </div>
-
-<% 3.times do %>
-  <%= @islands.sample.name %>
-<% end %>
 
 
 
