--- a/app/assets/stylesheets/pages/_island_show.scss
+++ b/app/assets/stylesheets/pages/_island_show.scss
@@ -55,7 +55,7 @@ body {
   margin-bottom: 10px;
   margin-top: 10px;
   box-shadow: 0 0px 55px rgba(0, 0, 0, 0.2);
-  border-radius: 5px;
+  // border-radius: 5px;
   min-height: 550px;
 }
 
@@ -112,7 +112,7 @@ form.new_booking {
   margin-bottom: 10px;
   margin-top: 10px;
   box-shadow: 0 0px 55px rgba(0, 0, 0, 0.2);
-  border-radius: 5px;
+  // border-radius: 5px;
   height: 550px;
 }
 
